Fixed overlap of actions with video layout control.

--- a/src/styles/components/_audiovideo.scss
+++ b/src/styles/components/_audiovideo.scss
@@ -195,11 +195,11 @@
   }
   .peerActions {
     bottom: 5%;
-    left: 0;
+    left: 40px;
     opacity: 0;
     pointer-events: auto;
     position: absolute;
-    right: 0;
+    right: 40px;
     text-align: center;
     transition-property: opacity;
     transition-duration: .2s;
